examples/invalid/parsing/emptyVariant.ordinis
foo : 〈 foo : Int64, bar : Int64 〉
foo = 〈 〉
